# mainkata

./: .gitignore  LICENSE  README.md  default_style.toml  pyproject.toml  requirements.txt
sample-data/: foo.csv  indo_vocab_set_lebaran.csv  indo_vocab_set_lebaran_vocab_sets_selected_terms.csv  indo_vocab_set_marriage.csv
src/mainkata/: cli.py  gui.py
src/mainkata/services/: generator.py
tests/: test_cli.py
tests/services/: test_generator.py
