[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mainkata"
version = "0.1.0"
description = "Generate classroom game slides from CSV rows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-pptx",
]

[project.scripts]
mainkata = "mainkata.cli:main"

[project.gui-scripts]
mainkata-gui = "mainkata.gui:main"
